fix font, upload <br>, next : admin dashboard

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,9 +1,9 @@
 body,p,h1,h2,h3 {
-	font-family: arial;
+	font-family: "Open Sans Semibold";
 }
 
 p.descRayon {
-	font-family: arial;
+	font-family: "Open Sans";
 	font-size:12px;
 }
 
