--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,10 +1,49 @@
 body,p,h1,h2,h3 {
-	font-family: "Open Sans Semibold";
+	font-family: "Open Sans", sans-serif;
+	font-weight: 300;
 }
 
 p.descRayon {
-	font-family: "Open Sans";
+	font-family: "Open Sans", sans-serif;
+	font-weight: 300;
 	font-size:12px;
+}
+
+a:link, a:visited {
+    color: blue;
+}
+a:hover {
+    color: green;
+}
+
+a.detail {
+	font-family: "Open Sans", sans-serif;
+	font-weight: 600;
+}
+
+table {
+	border-collapse: collapse;
+	width: 100%;
+}
+
+th {
+	font-family: "Open Sans", sans-serif;
+	font-weight: 600;
+	font-size:16px;	
+	height: 100px;
+	text-align: center;
+}
+
+table, td {
+	font-family: "Open Sans", sans-serif;
+	font-weight: 300;
+	font-size:16px;	
+	height: 50px;
+	text-align: center;
+}
+
+table, th, td {
+	/*border: 1px solid black;*/
 }
 
 /* Style untuk Main.php (Navbar) */
@@ -79,6 +118,9 @@ hr {
 }
 
 .button-like {
+	font-family: "Open Sans", sans-serif;
+	font-weight: bold;
+	font-size: 16px;
 	text-decoration: none;
 	background-color: transparent;
 	color: blue;
@@ -141,7 +183,8 @@ input[type=submit].button-buy:hover {
 
 input[type=submit] {
 	padding:7px 25px 7px 25px;
-	font-weight: bolder;
+	font-family: "Open Sans", sans-serif;
+	font-weight: bold;
 	color: white;
 	background-color: #4a86e8;
 	border: 0px;
@@ -149,13 +192,15 @@ input[type=submit] {
 
 input[type=submit]:hover {
 	padding:7px 25px 7px 25px;
-	font-weight: bolder;
+	font-family: "Open Sans", sans-serif;
+	font-weight: bold;
 	color: #3a62a5;
 	background-color: rgba(0,0,200,0.15);
 	border: 0px;
 }
 
 input[type=submit]:active {
+  font-family: "Open Sans", sans-serif;
   background-color: #3a62a5;
   transform: translateY(4px);
 }
@@ -234,6 +279,7 @@ img.fotoBukti{
 }
 
 .sp-textbox {
+	font-family: "Open Sans", sans-serif;
 	width:100%;
 	height: 30px;
 	border: 2px solid rgba(0,0,0,0.2);
@@ -241,6 +287,7 @@ img.fotoBukti{
 }
 
 select {
+	font-family: "Open Sans", sans-serif;
 	width:102.5%;
 	height: 35px;
 	border: 2px solid rgba(0,0,0,0.2);
